--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
                     <bundleArguments>
                         <icon.ico>src/main/resources/icon.ico</icon.ico>
                     </bundleArguments>
+                    <additionalAppResources>C:\Users\user\Desktop\snlforms\forms\</additionalAppResources>
                 </configuration>
             </plugin>
             <plugin>
